--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+.grid-wraper {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(7, 1fr);
+  grid-gap: 2px;
+  background-color: black;
+  width: fit-content;
+  border: 2px solid black;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.grid-item {
+  width: 80px;
+  height: 50px;
+  background-color: white;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.add-post {
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+  border: 1px solid black;
+  border-radius: 5px;
+  width: 25px;
+  height: 25px;
+  display: block;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  justify-content: center;
+  align-items: center;
+  background-color: blue;
+  font-size: 22px;
 }
-
-.App-link {
-  color: #61dafb;
+.conatainer-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 68px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.data-picer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-gap: 1px;
+  width: fit-content;
+  border: 2px solid black;
+}
+.data-picer-item {
+  margin: 0;
+  width: 65px;
+  height: 20px;
+  background-color: white;
+  border: 1px solid black;
 }
